[package]
name = "wayland-tablet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client = { version = "0.29", features = [ "dlopen"] }
wayland-protocols = { version = "0.29", features = [ "unstable_protocols", "client"] }