[package]
edition = "2018"
name = "wayland-tablet"
version = "0.1.0"
authors = ["Genevive <gen@nyble.dev>"]
description = "Graphics tablets on Wayland"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client = { version = "0.29", features = [ "dlopen"] }
wayland-protocols = { version = "0.29", features = [ "unstable_protocols", "client"] }